crates/ai/tests/snapshots/tool_outputs_parity__output_get_asset_allocation.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "currency": "USD",
    "groupBy": "class",
    "taxonomyId": "asset_classes",
    "taxonomyName": "Asset Classes",
    "totalValue": 0.0
  }
}
