crates/ai/tests/snapshots/tool_outputs_parity__output_get_asset_allocation_by_region.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "currency": "USD",
    "groupBy": "region",
    "taxonomyId": "regions",
    "taxonomyName": "Regions",
    "totalValue": 0.0
  }
}
