crates/ai/tests/snapshots/tool_outputs_parity__output_get_asset_allocation_by_risk.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "currency": "USD",
    "groupBy": "risk",
    "taxonomyId": "risk_category",
    "taxonomyName": "Risk Category",
    "totalValue": 0.0
  }
}
