crates/ai/tests/snapshots/tool_outputs_parity__output_get_asset_allocation_by_sector.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "currency": "USD",
    "groupBy": "sector",
    "taxonomyId": "industries_gics",
    "taxonomyName": "Sectors",
    "totalValue": 0.0
  }
}
