crates/ai/tests/snapshots/tool_outputs_parity__output_get_asset_allocation_drill_down.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "categoryName": "Mock Category",
    "currency": "USD",
    "groupBy": "sector",
    "holdings": [],
    "taxonomyId": "industries_gics",
    "taxonomyName": "Mock Taxonomy",
    "totalValue": 0.0
  }
}
