crates/ai/tests/snapshots/tool_outputs_parity__output_get_asset_allocation_invalid_group_by.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "err": "Tool execution failed: Invalid groupBy value 'invalid'. Must be 'class', 'sector', 'region', 'risk', or 'security_type'."
}
