crates/ai/tests/snapshots/tool_outputs_parity__output_get_asset_taxonomy_assignments_all_taxonomies.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
assertion_line: 465
expression: result
---
{
  "ok": {
    "assetQuery": "asset-aapl",
    "assignments": [
      {
        "assignmentId": "assignment-1",
        "categoryId": "equity",
        "categoryKey": "equity",
        "categoryName": "Equity",
        "source": "manual",
        "taxonomyId": "asset-tax",
        "taxonomyName": "Asset Class",
        "weightBasisPoints": 10000
      },
      {
        "assignmentId": "assignment-2",
        "categoryId": "equity",
        "categoryKey": "value",
        "categoryName": "Value",
        "source": "ai",
        "taxonomyId": "factor-tax",
        "taxonomyName": "Factors",
        "weightBasisPoints": 10000
      }
    ],
    "resolvedAsset": {
      "assetId": "asset-aapl",
      "currency": "USD",
      "displayCode": "AAPL",
      "exchangeMic": "XNAS",
      "instrumentType": "EQUITY",
      "label": "AAPL - Apple Inc.",
      "matchedBy": "asset_id",
      "name": "Apple Inc.",
      "symbol": "AAPL"
    }
  }
}
